--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leia Mais Comigo / Inicio</title>
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-top">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Galeria</a></li>
                 <li><a href="#">Agenda</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
-        <div>
-            <div>
+        <div class="header-content">
+            <div class="header-text">
                 <h1>Titulo</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut, inventore aperiam enim odit numquam. Animi aliquam veritatis inventore laborum eum nisi quibusdam neque vitae, nulla unde, sequi velit assumenda!</p>
-            <div>
+            </div>
+            <div class="header-logo">
                 <img src="./image/logo.png" alt="logomarca do projeto leia mais comigo" height="200">
             </div>
-
-            </div>
+            
         </div>
     </header>
 </body>
